<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/setting"
        android:title="Setting"
        app:showAsAction="always"
        android:icon="@mipmap/ic_settings_white_24dp"/>


    <item
        android:id="@+id/bscore_easy"
        android:title="@string/score_easy"
        app:showAsAction="never" />

    <item
        android:id="@+id/bscore_difficult"
        android:title="@string/score_difficult"
        app:showAsAction="never" />

    <item
        android:id="@+id/bscore"
        android:title="@string/score_classic"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>